// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Table CountryOrigin {
    id INTEGER [primary key]
    country_code TEXT 
    country_name TEXT 
    surtax_rate DECIMAL 
    }

Table CustomsEntry {
    id INTEGER [primary key]
    entry_number TEXT 
    importer_name TEXT 
    ship_date TEXT 
    province_id INTEGER 
    sys_config_id INTEGER 
    province_tax_rate DECIMAL 
    surtax_effective_date TEXT 
    surtax_active INTEGER 
    total_customs_value DECIMAL 
    total_base_duty DECIMAL 
    total_surtax DECIMAL 
    total_provincial_tax DECIMAL 
    grand_total_duties DECIMAL 
    notes TEXT 
    }

Table Province {
    id INTEGER [primary key]
    province_code TEXT 
    province_name TEXT 
    tax_rate DECIMAL 
    }

Table SysConfig {
    id INTEGER [primary key]
    name TEXT 
    discount_rate FLOAT 
    tax_rate FLOAT 
    notes TEXT 
    surtax_effective_date TEXT 
    program_code TEXT 
    order_reference TEXT 
    }

Table HsCodeRate {
    id INTEGER [primary key]
    hs_code TEXT 
    description TEXT 
    base_duty_rate DECIMAL 
    }

Table SurtaxLineItem {
    id INTEGER [primary key]
    customs_entry_id INTEGER 
    hs_code_id INTEGER 
    country_origin_id INTEGER 
    customs_value DECIMAL 
    quantity INTEGER 
    description TEXT 
    base_duty_rate DECIMAL 
    surtax_rate DECIMAL 
    surtax_applicable INTEGER 
    base_duty_amount DECIMAL 
    duty_paid_value DECIMAL 
    surtax_amount DECIMAL 
    provincial_tax_amount DECIMAL 
    line_total DECIMAL 
    }



// Relationships
    Ref: CustomsEntry.(province_id) > Province.(id)
    Ref: CustomsEntry.(sys_config_id) > SysConfig.(id)
    Ref: SurtaxLineItem.(country_origin_id) > CountryOrigin.(id)
    Ref: SurtaxLineItem.(customs_entry_id) > CustomsEntry.(id)
    Ref: SurtaxLineItem.(hs_code_id) > HsCodeRate.(id)
